# paddleocr-ui

./: AGENTS.md  README.md  pyproject.toml
src/paddleocr_ui/: __init__.py  api.py  app.py  config.py  handlers.py  main.py  utils.py
tests/: test_config.py
