[project]
name = "paddleocr-ui"
version = "0.1.0"
description = "A modern Gradio web interface for PaddleOCR-VL model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=5.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "pip-system-certs",
]

[project.scripts]
paddleocr-ui = "paddleocr_ui:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paddleocr_ui"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

